app.py removed and README included

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 stanford-core-nlp = backend\vision_api\resources\stanford-corenlp-full-2018-10-05
 name-list = backend\vision_api\resources\name_list.txt
-
+GOOGLE_APPLICATION_CREDENTIALS = backend\vision_api\resources\key
 
 [TEST]
 written_json = backend\utilities\ner\resources\mandeep_yadav_written_clolr_180.json
