--- a/config.ini
+++ b/config.ini
@@ -4,5 +4,5 @@ name-list = backend\vision_api\resources\name_list.txt
 GOOGLE_APPLICATION_CREDENTIALS = backend\vision_api\resources\key
 
 [TEST]
-written_json = backend\utilities\ner\resources\mandeep_yadav_written_clolr_180.json
-blank_json = backend\utilities\ner\resources\mandeep_yadav_blank_color_0.json
+written_json = test_resource\mandeev_yadav_written_clolor_355.json
+blank_json = test_resource\mandeep_yadav_blank_color_0.json
