--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+altgraph==0.16.1
+atomicwrites==1.3.0
+attrs==19.1.0
 cachetools==3.1.1
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
-enum34==1.1.6
+Click==7.0
+colorama==0.4.1
+Flask==1.0.3
+Flask-Cors==3.0.7
+future==0.17.1
 futures==3.2.0
 Genderize==0.3.1
 google-api-core==1.11.1
@@ -10,15 +17,34 @@ google-cloud-vision==0.37.0
 googleapis-common-protos==1.6.0
 grpcio==1.21.1
 idna==2.8
+importlib-metadata==0.17
+itsdangerous==1.1.0
+Jinja2==2.10.1
+macholib==1.11
+MarkupSafe==1.1.1
+more-itertools==7.0.0
+packaging==19.0
+pefile==2019.4.18
+pluggy==0.12.0
 protobuf==3.8.0
 psutil==5.6.2
+py==1.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
+pycrypto==2.6.1
+PyInstaller==3.4
+pyparsing==2.4.0
+pytest==4.6.2
 python-dateutil==2.8.0
 pytz==2019.1
+pywin32==224
+pywin32-ctypes==0.2.0
 requests==2.22.0
 rsa==4.0
 six==1.12.0
 stanfordcorenlp==3.9.1.1
 urllib3==1.25.3
+wcwidth==0.1.7
+Werkzeug==0.15.4
 wincertstore==0.2
+zipp==0.5.1
