api added with link as param

--- a/config.ini
+++ b/config.ini
@@ -6,3 +6,4 @@ GOOGLE_APPLICATION_CREDENTIALS = backend\vision_api\resources\key
 [TEST]
 written_json = test_resource\mandeev_yadav_written_clolor_355.json
 blank_json = test_resource\mandeep_yadav_blank_color_0.json
+upload_folder = input_images
