waitress added and contact number with 10 digits only returned

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 stanford-core-nlp = backend\vision_api\resources\stanford-corenlp-full-2018-10-05
 name-list = backend\vision_api\resources\name_list.txt
-GOOGLE_APPLICATION_CREDENTIALS = backend\vision_api\resources\key
+GOOGLE_APPLICATION_CREDENTIALS = backend\vision_api\resources\key\doctor_handwriting_recognition-c72012f8cb42.json
 
 [TEST]
 written_json = test_resource\mandeev_yadav_written_clolor_355.json
