--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Jinja2==2.10.1
 macholib==1.11
 MarkupSafe==1.1.1
 more-itertools==7.0.0
+olefile==0.46
 packaging==19.0
 pefile==2019.4.18
 pluggy==0.12.0
@@ -32,7 +33,6 @@ py==1.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycrypto==2.6.1
-PyInstaller==3.4
 pyparsing==2.4.0
 pytest==4.6.2
 python-dateutil==2.8.0
