--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 altgraph==0.16.1
 atomicwrites==1.3.0
 attrs==19.1.0
+blis==0.2.4
 cachetools==3.1.1
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+cymem==2.0.2
+en-core-web-sm==2.1.0
 Flask==1.0.3
 Flask-Cors==3.0.7
 future==0.17.1
@@ -16,17 +19,23 @@ google-auth==1.6.3
 google-cloud-vision==0.37.0
 googleapis-common-protos==1.6.0
 grpcio==1.21.1
+gunicorn==19.9.0
 idna==2.8
 importlib-metadata==0.17
 itsdangerous==1.1.0
 Jinja2==2.10.1
+jsonschema==3.0.1
 macholib==1.11
 MarkupSafe==1.1.1
 more-itertools==7.0.0
+murmurhash==1.0.2
+numpy==1.16.4
 olefile==0.46
 packaging==19.0
 pefile==2019.4.18
+plac==0.9.6
 pluggy==0.12.0
+preshed==2.0.1
 protobuf==3.8.0
 psutil==5.6.2
 py==1.8.0
@@ -34,7 +43,8 @@ pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycrypto==2.6.1
 pyparsing==2.4.0
-pytest==4.6.2
+pyrsistent==0.15.3
+pytest==5.0.0
 python-dateutil==2.8.0
 pytz==2019.1
 pywin32==224
@@ -42,8 +52,13 @@ pywin32-ctypes==0.2.0
 requests==2.22.0
 rsa==4.0
 six==1.12.0
-stanfordcorenlp==3.9.1.1
+spacy==2.1.4
+srsly==0.0.7
+thinc==7.0.4
+tqdm==4.32.2
 urllib3==1.25.3
+waitress==1.3.0
+wasabi==0.2.2
 wcwidth==0.1.7
 Werkzeug==0.15.4
 wincertstore==0.2
