--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,8 @@ pywin32-ctypes==0.2.0
 requests==2.22.0
 rsa==4.0
 six==1.12.0
-spacy==2.1.4
+spacy>=2.0.0,<3.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz#egg=en_core_web_sm
 srsly==0.0.7
 thinc==7.0.4
 tqdm==4.32.2
