--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ pyrsistent==0.15.3
 pytest==5.0.0
 python-dateutil==2.8.0
 pytz==2019.1
-pywin32==224
+pypiwin32==223
 pywin32-ctypes==0.2.0
 requests==2.22.0
 rsa==4.0
